include/waywallen_display.h


#define WAYWALLEN_DISPLAY_PROTOCOL_VERSION 7
typedef enum waywallen_err
{
    WAYWALLEN_OK           = 0,
    WAYWALLEN_ERR_INVAL    = -1, 
    WAYWALLEN_ERR_NOMEM    = -2, 
    WAYWALLEN_ERR_STATE    = -3, 
    WAYWALLEN_ERR_IO       = -4, 
    WAYWALLEN_ERR_PROTO    = -5, 
    WAYWALLEN_ERR_NOTCONN  = -6, 
    WAYWALLEN_ERR_NOT_IMPL = -7, 
} waywallen_err_t;
typedef struct waywallen_display waywallen_display_t;
typedef enum waywallen_log_level
{
    WAYWALLEN_LOG_DEBUG = 0,
    WAYWALLEN_LOG_INFO  = 1,
    WAYWALLEN_LOG_WARN  = 2,
    WAYWALLEN_LOG_ERROR = 3,
} waywallen_log_level_t;
typedef void (*waywallen_log_callback_t)(waywallen_log_level_t level, const char* msg,
                                         void* user_data);
void waywallen_display_set_log_callback(waywallen_log_callback_t cb, void* user_data);
typedef enum waywallen_conn_state
{
    WAYWALLEN_CONN_DISCONNECTED = 0,
    WAYWALLEN_CONN_CONNECTING,
    WAYWALLEN_CONN_CONNECTED,
    WAYWALLEN_CONN_DEAD,
} waywallen_conn_state_t;
typedef enum waywallen_stream_state
{
    WAYWALLEN_STREAM_INACTIVE = 0,
    WAYWALLEN_STREAM_ACTIVE,
} waywallen_stream_state_t;
typedef enum waywallen_handshake_state
{
    WAYWALLEN_HS_IDLE          = 0, 
    WAYWALLEN_HS_CONNECTING    = 1, 
    WAYWALLEN_HS_HELLO_PENDING = 2, 
    WAYWALLEN_HS_WELCOME_WAIT  = 3, 
    WAYWALLEN_HS_REGISTER_PEND = 4, 
    WAYWALLEN_HS_ACCEPTED_WAIT = 5, 
    WAYWALLEN_HS_READY         = 6, 
} waywallen_handshake_state_t;
#define WAYWALLEN_HS_DONE       1 
#define WAYWALLEN_HS_NEED_READ  2 
#define WAYWALLEN_HS_NEED_WRITE 3 
#define WAYWALLEN_HS_PROGRESS   4 
typedef enum waywallen_backend
{
    WAYWALLEN_BACKEND_NONE   = 0,
    WAYWALLEN_BACKEND_EGL    = 1,
    WAYWALLEN_BACKEND_VULKAN = 2,
    WAYWALLEN_BACKEND_DMABUF_RELAY = 3,
} waywallen_backend_t;
typedef struct waywallen_egl_ctx {
    void* egl_display;                      
    void* (*get_proc_address)(const char*); 
} waywallen_egl_ctx_t;
typedef struct waywallen_vk_ctx {
    void*    instance;        
    void*    physical_device; 
    void*    device;          
    uint32_t queue_family_index;
    void* (*vk_get_instance_proc_addr)(void* instance, const char* name);
} waywallen_vk_ctx_t;
typedef struct waywallen_rect {
    float x, y, w, h;
} waywallen_rect_t;
typedef struct waywallen_textures {
    uint32_t count;
    uint32_t tex_width;
    uint32_t tex_height;
    uint32_t fourcc;
    uint64_t modifier;
    uint32_t planes_per_buffer;
    waywallen_backend_t backend;
    void**    egl_images;  
    uint32_t* gl_textures; 
    void** vk_images;      
    void** vk_memories;    
    int      shadow_dmabuf_fd;
    uint32_t shadow_n_planes;
    uint32_t shadow_strides[WAYWALLEN_DMABUF_MAX_PLANES];
    uint64_t shadow_offsets[WAYWALLEN_DMABUF_MAX_PLANES];
    uint64_t shadow_modifier;
    uint64_t buffer_generation;
} waywallen_textures_t;
typedef struct waywallen_config {
    waywallen_rect_t source_rect;    
    waywallen_rect_t dest_rect;      
    uint32_t         transform;      
    float            clear_color[4]; 
    uint64_t buffer_generation;
    uint64_t config_generation;
} waywallen_config_t;
typedef struct waywallen_frame {
    uint32_t buffer_index;
    uint64_t seq;
    void* vk_acquire_semaphore;
    int      release_syncobj_fd;
    uint64_t buffer_generation;
} waywallen_frame_t;
typedef struct waywallen_display_callbacks {
    void (*on_textures_ready)(void* user_data, const waywallen_textures_t* textures);
    void (*on_textures_releasing)(void* user_data, const waywallen_textures_t* textures);
    void (*on_config)(void* user_data, const waywallen_config_t* config);
    void (*on_frame_ready)(void* user_data, const waywallen_frame_t* frame);
    void (*on_disconnected)(void* user_data, int err_code, const char* message);
    void* user_data;
} waywallen_display_callbacks_t;
waywallen_display_t* waywallen_display_new(const waywallen_display_callbacks_t* cb);
void waywallen_display_close(waywallen_display_t* d);
int  waywallen_display_drain(waywallen_display_t* d);
void waywallen_display_free(waywallen_display_t* d);
void waywallen_display_shutdown(waywallen_display_t* d);
int waywallen_display_bind_egl(waywallen_display_t* d, const waywallen_egl_ctx_t* ctx);
int waywallen_display_bind_vulkan(waywallen_display_t* d, const waywallen_vk_ctx_t* ctx);
int waywallen_display_set_drm_render_node(waywallen_display_t* d, uint32_t major, uint32_t minor);
int waywallen_display_begin_connect(waywallen_display_t* d, const char* socket_path,
                                    const char* display_name, const char* instance_id,
                                    uint32_t width, uint32_t height, uint32_t refresh_mhz);
int waywallen_display_advance_handshake(waywallen_display_t* d);
waywallen_handshake_state_t waywallen_display_handshake_state(waywallen_display_t* d);
int waywallen_display_connect(waywallen_display_t* d, const char* socket_path,
                              const char* display_name, const char* instance_id, uint32_t width,
                              uint32_t height, uint32_t refresh_mhz);
int waywallen_display_update_size(waywallen_display_t* d, uint32_t width, uint32_t height);
int waywallen_display_get_fd(waywallen_display_t* d);
int waywallen_display_dispatch(waywallen_display_t* d);
int waywallen_display_signal_release_syncobj(int fd);
waywallen_conn_state_t   waywallen_display_conn_state(waywallen_display_t* d);
waywallen_stream_state_t waywallen_display_stream_state(waywallen_display_t* d);
int  waywallen_display_create_gl_texture(waywallen_display_t* d, uint32_t image_index,
                                         uint32_t* out_gl_texture);
void waywallen_display_delete_gl_texture(waywallen_display_t* d, uint32_t image_index);